Fix minor layout issues

--- a/lms/static/certificates/sass/_components.scss
+++ b/lms/static/certificates/sass/_components.scss
@@ -321,6 +321,10 @@
     .accomplishment-signatories-title {
         @extend %rendering-hd-section;
     }
+    .accomplishment-rendering-image {
+        display: block;
+        margin: auto;
+    }
 }
 
 // metadata
